--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wottonrn05",
+  "name": "expornstore",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,25 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/slider": "^4.4.3",
-    "@react-native-picker/picker": "^2.5.0",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
     "@reduxjs/toolkit": "^1.9.6",
-    "expo": "^49.0.11",
-    "expo-av": "~13.4.1",
+    "expo": "~49.0.13",
+    "expo-av": "^13.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-screens": "^3.25.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "deprecated-react-native-prop-types": "^4.2.1"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
